--- a/templates/signup.html
+++ b/templates/signup.html
@@ -16,7 +16,7 @@
       <input type="text" name="username" placeholder="Username" required>
       <input type="password" name="password" placeholder="Password" required>
       <button type="submit">Sign Up</button>
-      <p style="margin-top: 16px;">Already have an account? <a href="/login">Log in here</a></p>
+      <p style="margin-top: 20px;">Already have an account? <a href="/login">[Log in here]</a></p>
     </form>
   </div>
 </body>
